tests/invalid/wrong_arg_count_singular/main.py
def double(x: int) -> int:
    return x + x

def run_case() -> None:
    y: int = double(1, 2)

if __name__ == "__main__":
    run_case()
